@@ -70,8 +70,8 @@ pres = 0.0
 
 tick_period = xc.get_int("TICK_PERIOD")
 
-interval_probe = xc.get_int("INTERVAL_PROBE") * (1000 / tick_period)
-interval_tsync = xc.get_int("INTERVAL_TSYNC") * (1000 / tick_period)
+interval_probe = xc.get_int("INTERVAL_PROBE") * (1000 / tick_period) - 1
+interval_tsync = xc.get_int("INTERVAL_TSYNC") * (1000 / tick_period) - 1
 
 count_probe = [ interval_probe - 1, interval_probe - 2 ]
 count_tsync = interval_tsync
